[tool.poetry]
name = "flask-react"
version = "0.1.0"
description = ""
authors = ["sjinwoo <sjw5953@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.3"
flask-cors = "3.0.10"
langchain = "0.0.154"
llama-index = "0.6.15"
pypdf = "3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
