[tool.poetry]
name = "streamlit-sql-sandbox"
version = "0.1.0"
description = ""
authors = ["sjinwoo <sjw5953@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
altair = "4.2.2"
langchain = "0.0.154"
llama-index = "0.6.15"
streamlit = "1.19.0"
streamlit-chat = "0.0.2.2"
transformers = "4.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
